--- a/app/views/alumni_news_letters/index.html.erb
+++ b/app/views/alumni_news_letters/index.html.erb
@@ -1,5 +1,5 @@
 
-<div class="col-md-8 center-block row">
+<div class="col-md-8 center-block row" style="border-top: 10rem">
     <div align="center" style="text-align: center">
       <h3>
         <% if @alumni_news_letters.previous_page %>
