--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -6,7 +6,8 @@
       <input type="checkbox" id="item1">
       <label for="item1">
         <span class="wrapper">
-          <span class="front">
+          <span class="image">
+            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">President</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
             <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/DMKgTjL.jpg">
           </span>
@@ -15,8 +16,6 @@
             <h3>Madison Doolittle</h3>
             <h2>Email</h2>
             <h3>mld5448@rit.edu</h3>
-            <h2>Major</h2>
-            <h3>Biomedical Sciences</h3>
           </span>
         </span>
       </label>
@@ -25,7 +24,8 @@
       <input type="checkbox" id="item2">
       <label for="item2">
         <span class="wrapper">
-          <span class="front">
+          <span class="image">
+            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">1st VP</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
             <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/fsUNgMW.jpg">
           </span>
@@ -34,8 +34,6 @@
             <h3>Kent Derbyshire</h3>
             <h2>Email</h2>
             <h3>kld4491@rit.edu</h3>
-            <h2>Major</h2>
-            <h3>Mechanical Engineering</h3>
           </span>
         </span>
       </label>
@@ -44,7 +42,8 @@
       <input type="checkbox" id="item3">
       <label for="item3">
         <span class="wrapper">
-          <span class="front">
+          <span class="image">
+            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">2nd VP</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
             <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/62942_1619728219040_1715437_n.jpg?oh=923ebb0efcd4cac7df0542b9411fab2d&oe=5484C600&__gda__=1418750015_a0f9fdb99366cde2a083436b6e23da59">
           </span>
@@ -53,8 +52,6 @@
             <h3>Paul Bianco</h3>
             <h2>Email</h2>
             <h3>pxb9965@g.rit.edu</h3>
-            <h2>Major</h2>
-            <h3>Biomedical Sciences</h3>
           </span>
         </span>
       </label>
@@ -63,7 +60,8 @@
       <input type="checkbox" id="item4">
       <label for="item4">
         <span class="wrapper">
-          <span class="front">
+          <span class="image">
+            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Treasurer</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
             <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/b9UMSnB.jpg">
           </span>
@@ -72,8 +70,6 @@
             <h3>Peter Webster</h3>
             <h2>Email</h2>
             <h3>pcw3752@rit.edu</h3>
-            <h2>Major</h2>
-            <h3>Mechanical Engineering</h3>
           </span>
         </span>
       </label>
@@ -82,7 +78,8 @@
       <input type="checkbox" id="item5">
       <label for="item5">
         <span class="wrapper">
-          <span class="front">
+          <span class="image">
+            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Chaplain</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
             <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/Xzx4dci.jpg">
           </span>
@@ -91,8 +88,6 @@
             <h3>Kyle Grant</h3>
             <h2>Email</h2>
             <h3>kpg1737@rit.edu</h3>
-            <h2>Major</h2>
-            <h3>Marketing</h3>
           </span>
         </span>
       </label>
@@ -101,7 +96,8 @@
       <input type="checkbox" id="item6">
       <label for="item6">
         <span class="wrapper">
-          <span class="front">
+          <span class="image">
+            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Sergeant</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
             <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/3Sz8haT.jpg">
           </span>
@@ -110,8 +106,6 @@
             <h3>Hayden Burger</h3>
             <h2>Email</h2>
             <h3>heb3544@rit.edu</h3>
-            <h2>Major</h2>
-            <h3>Mechanical Engineering</h3>
           </span>
         </span>
       </label>
@@ -126,7 +120,8 @@
     <input type="checkbox" id="item7">
     <label for="item7">
         <span class="wrapper">
-          <span class="front">
+          <span class="image">
+            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Alumni Rel</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
             <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="https://scontent-b-lga.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/10368270_1479343462318527_673464098958312708_n.jpg?oh=9bfd802f428db8a26469fac28ef3c1ac&oe=5493F37B">
           </span>
@@ -135,8 +130,6 @@
             <h3>Mark Eddy</h3>
             <h2>Email</h2>
             <h3>mxe6552@rit.edu</h3>
-            <h2>Major</h2>
-            <h3>Chemical Engineering</h3>
           </span>
         </span>
     </label>
@@ -145,7 +138,8 @@
     <input type="checkbox" id="item8">
     <label for="item8">
         <span class="wrapper">
-          <span class="front">
+          <span class="image">
+            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Web Master</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
             <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/Tb6p04z.jpg">
           </span>
@@ -154,8 +148,6 @@
             <h3>Paul Darragh</h3>
             <h2>Email</h2>
             <h3>pmd6624@rit.edu</h3>
-            <h2>Major</h2>
-            <h3>Software Engineering</h3>
           </span>
         </span>
     </label>
@@ -164,7 +156,8 @@
     <input type="checkbox" id="item9">
     <label for="item9">
         <span class="wrapper">
-          <span class="front">
+          <span class="image">
+            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Brotherhood</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
             <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/3Sz8haT.jpg">
           </span>
@@ -173,8 +166,6 @@
             <h3>Hayden Burger</h3>
             <h2>Email</h2>
             <h3>heb3544@rit.edu</h3>
-            <h2>Major</h2>
-            <h3>Mechanical Engineering</h3>
           </span>
         </span>
     </label>
@@ -183,7 +174,8 @@
     <input type="checkbox" id="item10">
     <label for="item10">
         <span class="wrapper">
-          <span class="front">
+          <span class="image">
+            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Social</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
             <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/XtJZ0F8.jpg">
           </span>
@@ -192,8 +184,6 @@
             <h3>Rob Bastian</h3>
             <h2>Email</h2>
             <h3>rab4068@rit.edu</h3>
-            <h2>Major</h2>
-            <h3>Public Relations</h3>
           </span>
         </span>
     </label>
@@ -202,7 +192,8 @@
     <input type="checkbox" id="item11">
     <label for="item11">
         <span class="wrapper">
-          <span class="front">
+          <span class="image">
+            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Comnty Srvc</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
             <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/C63yyEK.jpg">
           </span>
@@ -211,8 +202,6 @@
             <h3>Jake Hart-Predmore</h3>
             <h2>Email</h2>
             <h3>jhh6821@rit.edu</h3>
-            <h2>Major</h2>
-            <h3>Molecular Bioscience</h3>
           </span>
         </span>
     </label>
@@ -221,7 +210,8 @@
     <input type="checkbox" id="item12">
     <label for="item12">
         <span class="wrapper">
-          <span class="front">
+          <span class="image">
+            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Philanthropy</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
             <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/strCKwG.jpg">
           </span>
@@ -230,8 +220,6 @@
             <h3>Brandon Nieves</h3>
             <h2>Email</h2>
             <h3>bxn7681@rit.edu</h3>
-            <h2>Major</h2>
-            <h3>Hospitality Management</h3>
           </span>
         </span>
     </label>
@@ -240,7 +228,8 @@
     <input type="checkbox" id="item13">
     <label for="item13">
         <span class="wrapper">
-          <span class="front">
+          <span class="image">
+            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Business Ops</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
             <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/uy5qFiO.jpg">
           </span>
@@ -249,8 +238,6 @@
             <h3>Brandon Nieves</h3>
             <h2>Email</h2>
             <h3>bxn7681@rit.edu</h3>
-            <h2>Major</h2>
-            <h3>Physician Assistant</h3>
           </span>
         </span>
     </label>
@@ -258,7 +245,7 @@
 </ul>
 <div style="float: none; clear:both;"> </div>
 
-<h2 style="text-align: center;">Composite</h2>
-<hr>
+<!--<h2 style="text-align: center;">Composite</h2>-->
+<!--<hr>-->
 </body>
     
