--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -9,7 +9,7 @@
           <span class="image">
             <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">President</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/DMKgTjL.jpg">
+            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/DMKgTjL.jpg">
           </span>
           <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
             <h2>President</h2>
@@ -27,7 +27,7 @@
           <span class="image">
             <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">1st VP</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/fsUNgMW.jpg">
+            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/fsUNgMW.jpg">
           </span>
           <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
             <h2>First VP</h2>
@@ -45,7 +45,7 @@
           <span class="image">
             <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">2nd VP</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/62942_1619728219040_1715437_n.jpg?oh=923ebb0efcd4cac7df0542b9411fab2d&oe=5484C600&__gda__=1418750015_a0f9fdb99366cde2a083436b6e23da59">
+            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto;" src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/62942_1619728219040_1715437_n.jpg?oh=923ebb0efcd4cac7df0542b9411fab2d&oe=5484C600&__gda__=1418750015_a0f9fdb99366cde2a083436b6e23da59">
           </span>
           <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
             <h2>Second VP</h2>
@@ -63,7 +63,7 @@
           <span class="image">
             <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Treasurer</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/b9UMSnB.jpg">
+            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/b9UMSnB.jpg">
           </span>
           <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
             <h2>Treasurer</h2>
@@ -81,7 +81,7 @@
           <span class="image">
             <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Chaplain</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/Xzx4dci.jpg">
+            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/Xzx4dci.jpg">
           </span>
           <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
             <h2>Chaplain</h2>
@@ -99,7 +99,7 @@
           <span class="image">
             <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Sergeant</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/3Sz8haT.jpg">
+            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/3Sz8haT.jpg">
           </span>
           <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
             <h2>Sergeant</h2>
@@ -123,7 +123,7 @@
           <span class="image">
             <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Alumni Rel</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="https://scontent-b-lga.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/10368270_1479343462318527_673464098958312708_n.jpg?oh=9bfd802f428db8a26469fac28ef3c1ac&oe=5493F37B">
+            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto" src="https://scontent-b-lga.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/10368270_1479343462318527_673464098958312708_n.jpg?oh=9bfd802f428db8a26469fac28ef3c1ac&oe=5493F37B">
           </span>
           <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
             <h2>Alumni Rel</h2>
@@ -141,7 +141,7 @@
           <span class="image">
             <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Web Master</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/Tb6p04z.jpg">
+            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/Tb6p04z.jpg">
           </span>
           <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
             <h2>Web Master</h2>
@@ -159,7 +159,7 @@
           <span class="image">
             <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Brotherhood</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/3Sz8haT.jpg">
+            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/3Sz8haT.jpg">
           </span>
           <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
             <h2>Brotherhood</h2>
@@ -177,7 +177,7 @@
           <span class="image">
             <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Social</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/XtJZ0F8.jpg">
+            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/XtJZ0F8.jpg">
           </span>
           <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
             <h2>Social</h2>
@@ -195,7 +195,7 @@
           <span class="image">
             <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Comnty Srvc</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/C63yyEK.jpg">
+            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/C63yyEK.jpg">
           </span>
           <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
             <h2>Comnty Srvc</h2>
@@ -213,7 +213,7 @@
           <span class="image">
             <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Philanthropy</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/strCKwG.jpg">
+            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/strCKwG.jpg">
           </span>
           <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
             <h2>Philanthropy</h2>
@@ -231,7 +231,7 @@
           <span class="image">
             <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Business Ops</h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 250px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/uy5qFiO.jpg">
+            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto; overflow: hidden" src="http://i.imgur.com/uy5qFiO.jpg">
           </span>
           <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
             <h2>Business Ops</h2>
