--- a/app/views/users/edit_all.html.erb
+++ b/app/views/users/edit_all.html.erb
@@ -3,14 +3,15 @@
       <tr>
         <th>First Name</th>
         <th>Last Name</th>
-        <th>E-Mail</th>
+        <th>Role</th>
+        <th></th>
       </tr>
       <% @users.each do |user| %>
           <%= fields_for "user[]", user do |user_fields| %>
               <tr>
-                <td><%= user_fields.text_field :first_name %></td>
-                <td><%= user_fields.text_field :last_name %></td>
-                <td><%= user_fields.email_field :email %></td>
+                <td><%= user_fields.text_field :first_name,:disabled => true %></td>
+                <td><%= user_fields.text_field :last_name,:disabled => true %></td>
+                <td><%= user_fields.collection_select :role, User::ALLROLES, :to_s, :to_s, :class => "col-md-3" %></td>
               </tr>
           <% end %>
       <% end %>
