--- a/app/assets/stylesheets/valentines_day_delieveries.css.scss
+++ b/app/assets/stylesheets/valentines_day_delieveries.css.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the flower_deliveries controller here.
+// Place all the styles related to the valentines_day_delieveries controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
