fixed <a> transperent issue

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -75,7 +75,7 @@ body {
 //End of the header
 //Start of the footer
 a:hover{
-  //background-color: transparent !important;
+  background-color: transparent !important;
 }
 .footer {
   margin-top: 19rem;
@@ -428,6 +428,10 @@ ________________________________________*/
 }
 
 //faq
+.nav > li > a:hover, .nav > li > a:focus {
+  background-color: $FooterBackground;
+  border-color: $FooterBackground;
+}
 body {
   padding-top: 30px;
 }
@@ -459,11 +463,6 @@ body {
 .panel-heading a:focus {
   text-decoration: none;
   color: $FooterBackground;
-}
-
-.nav > li > a:hover, .nav > li > a:focus {
-  background-color: $FooterBackground;
-  border-color: $FooterBackground;
 }
 
 .faq-cat-content .panel-heading:hover {
