--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,10 +4,10 @@
         <a class="logo selected" href="/">
           <img alt="Phi Kappa Tau" src="http://pktphichapter.org/wp-content/themes/PKTphichapter-201208/images/branding2012-crest.png">
         </a>
-        <a href="https://www.facebook.com/RITPhiTau" style="margin-left: 41px">
+        <a class="logo" href="https://www.facebook.com/RITPhiTau" style="margin-left: 41px">
           <img src="http://www.nationalbeautyinstitute.com/images/facebook.png" style="width:60px;height:60px;">
         </a>
-        <a href="https://twitter.com/RITPKT" style="margin-left: 15px">
+        <a class="logo" href="https://twitter.com/RITPKT" style="margin-left: 15px">
           <img src="http://www.doctordigital.com.ar/main/images/twitter-logo-white.png" style="width:60px;height:60px;">
         </a>
       </div>
