--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -213,7 +213,13 @@ hr {
 
   //background-image: repeating-linear-gradient(120deg, rgba(255,255,255,.1), rgba(255,255,255,.1) 1px, transparent 1px, transparent 60px), repeating-linear-gradient(60deg, rgba(255,255,255,.1), rgba(255,255,255,.1) 1px, transparent 1px, transparent 60px), linear-gradient(60deg, rgba(0,0,0,.1) 25%, transparent 25%, transparent 75%, rgba(0,0,0,.1) 75%, rgba(0,0,0,.1)), linear-gradient(120deg, rgba(0,0,0,.1) 25%, transparent 25%, transparent 75%, rgba(0,0,0,.1) 75%, rgba(0,0,0,.1));
   background-size: 70px 120px;
-  background-color: #6d695c;
+  background-image: url("http://americanmuslimconsumer.com/wp-content/uploads/2013/09/blank-user.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  -o-background-size: 100% 100%, auto;
+  -moz-background-size: 100% 100%, auto;
+  -webkit-background-size: 100% 100%, auto;
+  background-size: 100% 100%, auto;
   overflow: hidden;
 }
 
@@ -438,6 +444,7 @@ a.not-active:hover{
   background-color: $FooterBackground !important;
   border-color: $FooterBackground !important;
 }
+
 body {
   padding-top: 30px;
 }
