--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -2,250 +2,52 @@
 <h2 style="text-align: center;">Executive Board</h2>
 <hr>
   <ul class="flipping-cards">
+    <% @eboard.each do |position| %>
     <li>
-      <input type="checkbox" id="item1">
-      <label for="item1">
+      <input type="checkbox" id="item<%= position.first.id %>">
+      <label for="item<%= position.first.id %>">
         <span class="wrapper">
           <span class="image">
-            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">President</h3>
+            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;"><%= position.first.role.slice(0,1).capitalize if position.first.role? %><%= position.first.role.slice(1..-1) if position.first.role? %></h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/DMKgTjL.jpg">
+            <%= image_tag position.first.profile_picture_url, :class => "user_img" if position.first.profile_picture? %>
           </span>
-          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
-            <h2>President</h2>
-            <h3>Madison Doolittle</h3>
+          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;word-wrap: break-word;">
+            <h2><%= position.first.role.slice(0,1).capitalize if position.first.role? %><%= position.first.role.slice(1..-1) if position.first.role? %></h2>
+            <h3><%= position.first.first_name if position.first.first_name? %> <%= " " + position.first.last_name if position.first.last_name? %></h3>
             <h2>Email</h2>
-            <h3>mld5448@rit.edu</h3>
+            <h3><%= position.first.email %></h3>
           </span>
         </span>
       </label>
     </li>
-    <li>
-      <input type="checkbox" id="item2">
-      <label for="item2">
-        <span class="wrapper">
-          <span class="image">
-            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">1st VP</h3>
-            <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/fsUNgMW.jpg">
-          </span>
-          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
-            <h2>First VP</h2>
-            <h3>Kent Derbyshire</h3>
-            <h2>Email</h2>
-            <h3>kld4491@rit.edu</h3>
-          </span>
-        </span>
-      </label>
-    </li>
-    <li>
-      <input type="checkbox" id="item3">
-      <label for="item3">
-        <span class="wrapper">
-          <span class="image">
-            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">2nd VP</h3>
-            <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto;" src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/62942_1619728219040_1715437_n.jpg?oh=923ebb0efcd4cac7df0542b9411fab2d&oe=5484C600&__gda__=1418750015_a0f9fdb99366cde2a083436b6e23da59">
-          </span>
-          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
-            <h2>Second VP</h2>
-            <h3>Paul Bianco</h3>
-            <h2>Email</h2>
-            <h3>pxb9965@g.rit.edu</h3>
-          </span>
-        </span>
-      </label>
-    </li>
-    <li>
-      <input type="checkbox" id="item4">
-      <label for="item4">
-        <span class="wrapper">
-          <span class="image">
-            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Treasurer</h3>
-            <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/b9UMSnB.jpg">
-          </span>
-          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
-            <h2>Treasurer</h2>
-            <h3>Peter Webster</h3>
-            <h2>Email</h2>
-            <h3>pcw3752@rit.edu</h3>
-          </span>
-        </span>
-      </label>
-    </li>
-    <li>
-      <input type="checkbox" id="item5">
-      <label for="item5">
-        <span class="wrapper">
-          <span class="image">
-            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Chaplain</h3>
-            <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/Xzx4dci.jpg">
-          </span>
-          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
-            <h2>Chaplain</h2>
-            <h3>Kyle Grant</h3>
-            <h2>Email</h2>
-            <h3>kpg1737@rit.edu</h3>
-          </span>
-        </span>
-      </label>
-    </li>
-    <li>
-      <input type="checkbox" id="item6">
-      <label for="item6">
-        <span class="wrapper">
-          <span class="image">
-            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Sergeant</h3>
-            <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/3Sz8haT.jpg">
-          </span>
-          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
-            <h2>Sergeant</h2>
-            <h3>Hayden Burger</h3>
-            <h2>Email</h2>
-            <h3>heb3544@rit.edu</h3>
-          </span>
-        </span>
-      </label>
-    </li>
+    <% end %>
   </ul>
   <div style="float: none; clear:both;"> </div>
 
-<h2 style="text-align: center;">Chairs</h2>
+<h2 style="text-align: center;">Executive Board</h2>
 <hr>
 <ul class="flipping-cards">
-  <li>
-    <input type="checkbox" id="item7">
-    <label for="item7">
+  <% @chairs.each do |position| %>
+      <li>
+        <input type="checkbox" id="item<%= position.first.id %>">
+        <label for="item<%= position.first.id %>">
         <span class="wrapper">
           <span class="image">
-            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Alumni Rel</h3>
+            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;"><%= position.first.role.slice(0,1).capitalize if position.first.role? %><%= position.first.role.slice(1..-1) if position.first.role? %></h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto" src="https://scontent-b-lga.xx.fbcdn.net/hphotos-xap1/v/t1.0-9/10368270_1479343462318527_673464098958312708_n.jpg?oh=9bfd802f428db8a26469fac28ef3c1ac&oe=5493F37B">
+            <%= image_tag position.first.profile_picture_url, :class => "user_img" if position.first.profile_picture? %>
           </span>
-          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
-            <h2>Alumni Rel</h2>
-            <h3>Mark Eddy</h3>
+          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;word-wrap: break-word;">
+            <h2><%= position.first.role == "admin" ? "Web Master" : position.first.role.slice(0,1).capitalize if position.first.role? %><%= position.first.role.slice(1..-1) if position.first.role? %></h2>
+            <h3><%= position.first.first_name if position.first.first_name? %> <%= " " + position.first.last_name if position.first.last_name? %></h3>
             <h2>Email</h2>
-            <h3>mxe6552@rit.edu</h3>
+            <h3><%= position.first.email %></h3>
           </span>
         </span>
-    </label>
-  </li>
-  <li>
-    <input type="checkbox" id="item8">
-    <label for="item8">
-        <span class="wrapper">
-          <span class="image">
-            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Web Master</h3>
-            <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/Tb6p04z.jpg">
-          </span>
-          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
-            <h2>Web Master</h2>
-            <h3>Paul Darragh</h3>
-            <h2>Email</h2>
-            <h3>pmd6624@rit.edu</h3>
-          </span>
-        </span>
-    </label>
-  </li>
-  <li>
-    <input type="checkbox" id="item9">
-    <label for="item9">
-        <span class="wrapper">
-          <span class="image">
-            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Brotherhood</h3>
-            <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/3Sz8haT.jpg">
-          </span>
-          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
-            <h2>Brotherhood</h2>
-            <h3>Hayden Burger</h3>
-            <h2>Email</h2>
-            <h3>heb3544@rit.edu</h3>
-          </span>
-        </span>
-    </label>
-  </li>
-  <li>
-    <input type="checkbox" id="item10">
-    <label for="item10">
-        <span class="wrapper">
-          <span class="image">
-            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Social</h3>
-            <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/XtJZ0F8.jpg">
-          </span>
-          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
-            <h2>Social</h2>
-            <h3>Rob Bastian</h3>
-            <h2>Email</h2>
-            <h3>rab4068@rit.edu</h3>
-          </span>
-        </span>
-    </label>
-  </li>
-  <li>
-    <input type="checkbox" id="item11">
-    <label for="item11">
-        <span class="wrapper">
-          <span class="image">
-            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Comnty Srvc</h3>
-            <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/C63yyEK.jpg">
-          </span>
-          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
-            <h2>Comnty Srvc</h2>
-            <h3>Jake Hart-Predmore</h3>
-            <h2>Email</h2>
-            <h3>jhh6821@rit.edu</h3>
-          </span>
-        </span>
-    </label>
-  </li>
-  <li>
-    <input type="checkbox" id="item12">
-    <label for="item12">
-        <span class="wrapper">
-          <span class="image">
-            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Philanthropy</h3>
-            <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto" src="http://i.imgur.com/strCKwG.jpg">
-          </span>
-          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
-            <h2>Philanthropy</h2>
-            <h3>Brandon Nieves</h3>
-            <h2>Email</h2>
-            <h3>bxn7681@rit.edu</h3>
-          </span>
-        </span>
-    </label>
-  </li>
-  <li>
-    <input type="checkbox" id="item13">
-    <label for="item13">
-        <span class="wrapper">
-          <span class="image">
-            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;">Business Ops</h3>
-            <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
-            <img style="width: auto; height: 247px; display: block; margin-left: auto; margin-right: auto; overflow: hidden" src="http://i.imgur.com/uy5qFiO.jpg">
-          </span>
-          <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;">
-            <h2>Business Ops</h2>
-            <h3>Brandon Nieves</h3>
-            <h2>Email</h2>
-            <h3>bxn7681@rit.edu</h3>
-          </span>
-        </span>
-    </label>
-  </li>
+        </label>
+      </li>
+  <% end %>
 </ul>
 <div style="float: none; clear:both;"> </div>
-
-<!--<h2 style="text-align: center;">Composite</h2>-->
-<!--<hr>-->
 </body>
-    
