--- a/app/views/static_pages/faq.html.erb
+++ b/app/views/static_pages/faq.html.erb
@@ -7,10 +7,10 @@
     <div class="col-md-6 col-md-offset-3">
       <!-- Nav tabs category -->
       <ul class="nav nav-tabs faq-cat-tabs">
-        <li class="not-active active"><a href="#faq-cat-1" data-toggle="tab"><%= @faq_categories.first.title %></a></li>
+        <li class="active"><a href="#faq-cat-1" data-toggle="tab"><%= @faq_categories.first.title %></a></li>
         <% @faq_categories.each do |category| %>
             <% next if category.id == 1 %>
-            <li><a class="not-active" href="#faq-cat-<%= category.id %>" data-toggle="tab"><%= category.title %></a></li>
+            <li><a href="#faq-cat-<%= category.id %>" data-toggle="tab"><%= category.title %></a></li>
         <% end %>
       </ul>
 
