updated contact page for web master

--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -34,12 +34,12 @@
         <label for="item<%= position.first.id %>">
         <span class="wrapper">
           <span class="image">
-            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;"><%= position.first.role.slice(0,1).capitalize if position.first.role? %><%= position.first.role.slice(1..-1) if position.first.role? %></h3>
+            <h3 style="position: absolute; bottom: -5px; left: 5px; color: #ffffff; background-color: #5E0000;"><%= position.first.role == "admin" ? "Web Master": position.first.role.slice(0,1).capitalize %> <%= position.first.role == "admin" ? "" : position.first.role.slice(1..-1) %></h3>
             <img style="width: auto; height: 30px; position: absolute; bottom: 5px; right: 5px;" src="http://png-3.findicons.com/files/icons/1963/colorcons_blue/128/info.png">
             <%= image_tag position.first.profile_picture_url, :class => "user_img" if position.first.profile_picture? %>
           </span>
           <span class="back" style="text-align: center; color: #ffffff; background-color: #5E0000;word-wrap: break-word;">
-            <h2><%= position.first.role == "admin" ? "Web Master" : position.first.role.slice(0,1).capitalize if position.first.role? %><%= position.first.role.slice(1..-1) if position.first.role? %></h2>
+            <h2><%= position.first.role == "admin" ? "Web Master" : position.first.role.slice(0,1).capitalize %> <%= position.first.role == "admin" ? "" : position.first.role.slice(1..-1)%></h2>
             <h3><%= position.first.first_name if position.first.first_name? %> <%= " " + position.first.last_name if position.first.last_name? %></h3>
             <h2>Email</h2>
             <h3><%= position.first.email %></h3>
