--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,19 @@
+<br />
+<div class="col-md-6 center-block row">
+  <div class="card">
+    <div align="center">
 <h2>Forgot your password?</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
   <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+  <%= f.email_field :email, autofocus: true %></div><br />
 
   <div><%= f.submit "Send me reset password instructions" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+      </div>
+    </div>
