--- a/app/views/static_pages/contact_us.html.erb
+++ b/app/views/static_pages/contact_us.html.erb
@@ -16,7 +16,7 @@
             <h2><%= position.first.role.slice(0,1).capitalize %><%= position.first.role.slice(1..-1) %></h2>
             <h3><%= position.first.first_name if position.first.first_name? %> <%= " " + position.first.last_name if position.first.last_name? %></h3>
             <h2>Email</h2>
-            <h3><%= position.first.email %></h3>
+            <h3><%= mail_to position.first.email %></h3>
           </span>
         </span>
       </label>
@@ -42,7 +42,7 @@
             <h2><%= position.first.role == "admin" ? "Web Master" : position.first.role.slice(0,1).capitalize %> <%= position.first.role == "admin" ? "" : position.first.role.slice(1..-1)%></h2>
             <h3><%= position.first.first_name if position.first.first_name? %> <%= " " + position.first.last_name if position.first.last_name? %></h3>
             <h2>Email</h2>
-            <h3><%= position.first.email %></h3>
+            <h3 style="color: #ffffff !important;"><%= mail_to position.first.email %></h3>
           </span>
         </span>
         </label>
